# rust-project-structure

./: README.md
rust-project-structure/: Cargo.toml  non_marker_teams.dot  subteam_of.dot
rust-project-structure/src/: cli.rs  main.rs  types.rs
